syntax = "proto3";

                 package salonService;
service SalonServiceService {
 rpc createSalonService (SalonServiceCreateInput) returns (SalonService) {}
rpc salonServices (findManyParams) returns (stream SalonService) {}
rpc salonService (SalonServiceWhereUniqueInput) returns (SalonService) {}
rpc updateSalonService (SalonServiceUpdateInput) returns (SalonService) {}
rpc deleteSalonService (SalonServiceWhereUniqueInput) returns (SalonService) {} 
 }
message SalonServiceCreateInput {
string description = 1;
int32 duration = 2;
string id = 3;
string img = 4;
string name = 5;
int32 price = 6;
};
message SalonService {
string description = 1;
int32 duration = 2;
string id = 3;
string img = 4;
string name = 5;
int32 price = 6;
};
message SalonServiceWhereUniqueInput {
string description = 1;
int32 duration = 2;
string id = 3;
string img = 4;
string name = 5;
int32 price = 6;
};
message SalonServiceUpdateInput {
string description = 1;
int32 duration = 2;
string id = 3;
string img = 4;
string name = 5;
int32 price = 6;
};
message findManyParams {

};